--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c,c++,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,c++,visualstudiocode
 
+dist/*
+
 ### C ###
 # Prerequisites
 *.d
